--- a/mapp.ui
+++ b/mapp.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>460</width>
-    <height>538</height>
+    <width>454</width>
+    <height>517</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>50</y>
+      <y>40</y>
       <width>450</width>
       <height>450</height>
      </rect>
@@ -30,7 +30,7 @@
    <widget class="QPushButton" name="mapButton">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>310</x>
       <y>0</y>
       <width>41</width>
       <height>41</height>
@@ -52,7 +52,7 @@
    <widget class="QPushButton" name="satButton">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>360</x>
       <y>0</y>
       <width>41</width>
       <height>41</height>
@@ -95,12 +95,43 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>191</width>
+      <width>151</width>
       <height>41</height>
      </rect>
     </property>
     <property name="focusPolicy">
      <enum>Qt::ClickFocus</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="refreshButton">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>0</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>20</pointsize>
+      <weight>75</weight>
+      <italic>false</italic>
+      <bold>true</bold>
+      <strikeout>false</strikeout>
+     </font>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
+    <property name="text">
+     <string>⭯</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
@@ -109,12 +140,11 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>460</width>
+     <width>454</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
