--- a/mapp.ui
+++ b/mapp.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>451</width>
-    <height>518</height>
+    <height>534</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -132,6 +132,22 @@
     </property>
     <property name="default">
      <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="mailBox">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>490</y>
+      <width>451</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(126, 226, 138);</string>
+    </property>
+    <property name="text">
+     <string>mail index</string>
     </property>
    </widget>
   </widget>
